# Mammo-FM

./: .gitignore  LICENSE_WEIGHTS.txt  README.md  environment.yml  pyproject.toml
doc/: cls_finetune.py  cls_linear_probe.py  det.py  z6_results.py
src/codebase/: metrics.py  train_classifier.py  train_detector.py
src/codebase/AsymMirai-master/: .gitignore  README.md
src/codebase/AsymMirai-master/asymmetry_model/: cal_init_mean.py  calibrate_risks.py  mammo_clip_localized_diff_head.py  mammo_clip_metadataset.py  run_cal_mean.py  (+12 more)
src/codebase/Classifiers/: experiments.py
src/codebase/Datasets/: dataset_concepts.py  dataset_utils.py
src/codebase/Detectors/: experiments.py
src/codebase/breastclip/: __init__.py  trainer.py  trainer_ddp.py
src/codebase/configs/: pre_train_b5_clip.yaml  pre_train_b5_w_vindr_clip.yaml
src/preprocessing/: preprocess_canada.py  zz-preprocess_canada.py
src/scripts/: cmmd_classification_run.sh  nl_breast_classification_run.sh  vindr_abnormal_classification_run.sh  vindr_classification_run.sh  vindr_detection_run.sh
src/scripts/chk_pts/: rsna_classification_upmc_embed_bu_mayo_run.sh  rsna_classification_upmc_embed_mayo_run.sh  vindr_classification_upmc_embed_bu_mayo_run.sh  vindr_classification_upmc_embed_mayo_run.sh  vindr_detection_upmc_embed_bu_mayo_run.sh  vindr_detection_upmc_embed_mayo_run.sh
src/scripts/configs/: cmmd_configs.sh  nl_breast_configs.sh  rsna_configs.sh  vindr_abnormal_configs.sh  vindr_configs.sh
src/scripts/preprocessing/: canada.sh
src/scripts/qsub_templates/: base_classifier.qsub  base_detector.qsub
(+32 files in other folders)
